# silmari-Context-Engine

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER-SETUP.md  Dockerfile  LICENSE  PHASE_7_IMPLEMENTATION_SUMMARY.md  PROMPT.md  QUICK_REFERENCE_TEST_COVERAGE.txt  README.md  TEST_COVERAGE_ANALYSIS_REQ_008.md  TEST_COVERAGE_CHECKLIST_REQ_008.md  TEST_COVERAGE_INDEX.md  TEST_COVERAGE_SUMMARY_REQ_008.md  docker-claude.sh  docker-compose.yml  go.mod  go.sum  install.sh  loop-runner.py  loop.sh  mcp-setup.py  mypy.ini  orchestrator.py  planning_orchestrator.py  pyproject.toml  resume_pipeline.py  resume_planning.py  setup-context-engineered.sh  setup-native-hooks.sh  test-conversation.py
.agent/: memory.db
.beads/: issues.jsonl  last-touched  sync-state.json
.claude/: settings.json
.rlm-act-checkpoints/: 1be7b30f-ea97-4b5e-9bf7-8a963a9defb5.json  1cab321e-4821-4cff-8f1c-ca963c542287.json  1f626451-1083-4692-9d9f-624a8d97acef.json  222f7e0b-59c4-413b-9416-9d95c8a93f15.json  46ac655d-ede3-48b7-985e-d3e169587f3c.json  4bd76ae5-0cad-4ab0-a0da-835b0d091583.json  5ae1764b-c484-40b7-981f-56f5a27eb0db.json  5c58d93e-99d3-4bb4-812f-1a0a58b58edd.json  5fb2bbfa-038b-4658-b540-8c54f2e4e0a2.json  5fc4cc63-ec77-4df5-a74e-d365b202ec02.json  6162de92-1993-47a1-8a58-e2db7fa46465.json  65ea1d4d-7b3e-4f3d-ab34-2ebd51732357.json  6638940a-9f70-4e15-a671-c53b69f9a3f8.json  71844e89-ada9-4bf1-afb9-6a9f3c947f80.json  78a7b725-a6c6-4fd3-baa9-688d2afc2b4e.json  7e257801-4d14-41f4-b61c-fb5ea4c2819d.json  901fb34b-2317-4c4e-9f75-16471cb7bdfa.json  94891a3b-778f-49ba-b7fd-770cac3a1968.json  9b55d36c-7a97-4a12-a899-94446980bce2.json  b6bb5226-c16b-4093-ae03-467a8cefffd8.json  baf68a8a-271e-4d2b-83d2-14acced22d67.json  c8fccb8d-aef1-45d8-8c86-e4e75d50bc17.json  ec6009ac-48af-47df-a08a-8c91727f996e.json  ecb6291f-1bb7-4e65-b500-016a61a2b566.json  f5cbc88a-5cb2-4e5a-b3da-dd169f67ba67.json
(+671 files in other folders)
