[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "silmari-codewriter-rlm"
version = "0.5.0"
description = "Autonomous TDD Pipeline - Research, Learn, Model, Act"
authors = ["Maceo <maceo@silmari.com>"]
readme = "README.md"
license = "MIT"
keywords = ["tdd", "autonomous", "pipeline", "cli", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Include all packages for distribution
packages = [
    { include = "silmari_rlm_act" },
    { include = "planning_pipeline" },
    { include = "context_window_array" },
]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies
click = "^8.1.0"
requests = "^2.31.0"
numpy = "^2.0.0"
claude-agent-sdk = "^0.1.0"

# Optional for full functionality
baml-py = { version = "^0.76.0", optional = true }

[tool.poetry.extras]
baml = ["baml-py"]
all = ["baml-py"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
hypothesis = "^6.0.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
ruff = "^0.3.0"

[tool.poetry.scripts]
silmari-codewriter-rlm = "silmari_rlm_act.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "silmari_rlm_act/tests",
    "context_window_array/tests",
    "planning_pipeline/tests",
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
